feat: implement reset functionality in column and record editor components; enhance form handling on drawer hide for improved user experience

--- a/client/src/app/features/base/table/column-editor/column-editor-drawer.component.html
+++ b/client/src/app/features/base/table/column-editor/column-editor-drawer.component.html
@@ -3,6 +3,7 @@
   position="right"
   [header]="mode() === 'edit' ? `Edit column: ${column().name}` : 'Add column'"
   styleClass="!w-150 custom-drawer"
+  (onHide)="reset()"
 >
   <ng-template #content>
     <form #columnForm="ngForm" (ngSubmit)="onSubmit()">
