style: update label text in API key management component for clarity; add required field indicator for improved user guidance

--- a/client/src/app/features/api-keys/api-key-manangement/api-key-management.component.html
+++ b/client/src/app/features/api-keys/api-key-manangement/api-key-management.component.html
@@ -13,9 +13,13 @@
       <div class="p-5">
         <div class="grid grid-cols-3 w-full gap-12">
           <label for="name" class="col-span-1">
-            <p class="font-medium text-sm">Name</p>
+            <p class="font-medium text-sm">General</p>
           </label>
           <div class="flex flex-col gap-1 col-span-2">
+            <label class="text-sm">
+              Name
+              <i class="icon icon-asterisk text-red-500"></i>
+            </label>
             <input
               pInputText
               id="name"
