feat: enhance table service and field components with validation properties; implement min/max constraints for various field types and update error handling in table cell service

--- a/client/src/app/shared/spreadsheet/components/field-cell/number/cell.component.html
+++ b/client/src/app/shared/spreadsheet/components/field-cell/number/cell.component.html
@@ -1,6 +1,6 @@
 @if (isInputting) {
   <input-box
-    [type]="field.allowNegative ? 'number' : 'positive-number'"
+    type="number"
     [content]="data"
     (edited)="onInputBoxEdited($event)"
     (input)="onInputBoxInput($event)"
