--- a/client/src/app/shared/spreadsheet/components/field-cell/integer/cell.component.html
+++ b/client/src/app/shared/spreadsheet/components/field-cell/integer/cell.component.html
@@ -1,6 +1,6 @@
 @if (isInputting) {
   <input-box
-    [type]="field.allowNegative ? 'integer' : 'positive-integer'"
+    type="integer"
     [content]="data"
     (edited)="onInputBoxEdited($event)"
     (input)="onInputBoxInput($event)"
