--- a/client/src/app/features/base/table/field-editors/date/editor.component.html
+++ b/client/src/app/features/base/table/field-editors/date/editor.component.html
@@ -12,6 +12,7 @@
     [disabled]="viewOnly()"
     [(ngModel)]="data"
     [showTime]="true"
+    [showClear]="true"
     [fluid]="true"
     appendTo="body"
   />
