--- a/client/src/app/shared/spreadsheet/components/field-cell/date/cell.component.html
+++ b/client/src/app/shared/spreadsheet/components/field-cell/date/cell.component.html
@@ -12,6 +12,12 @@
     (onShow)="onMenuOpened()"
     (onHide)="onMenuClosed()"
   >
-    <p-datepicker [inline]="true" [ngModel]="data" (ngModelChange)="onDatePicked($event)" />
+    <p-datepicker
+      [inline]="true"
+      [ngModel]="data"
+      (ngModelChange)="onDatePicked($event)"
+      [showTime]="true"
+      [showClear]="true"
+    />
   </p-overlay>
 }
