refactor: remove unused SelectButton component and streamline column editor; update date formatting in various components for consistency

--- a/client/src/app/shared/spreadsheet/spreadsheet.component.html
+++ b/client/src/app/shared/spreadsheet/spreadsheet.component.html
@@ -59,8 +59,8 @@
         <p-inputgroup-addon>
           <div class="text-center">
             <span class="text-sm font-medium">
-              {{ tableService.layout.cell.search.currentMatchIndex || 0 }}/{{
-                tableService.searchResults.length - 1
+              {{ (tableService.layout.cell.search.currentMatchIndex || 0) + 1 }}/{{
+                tableService.searchResults.length
               }}
             </span>
           </div>
