feat: enhance column editor with icons for data types and update field objects to utilize FIELD_ICON_MAP for improved UI representation

--- a/client/src/app/features/base/table/column-editor/column-editor-drawer.component.html
+++ b/client/src/app/features/base/table/column-editor/column-editor-drawer.component.html
@@ -79,7 +79,14 @@
                 (ngModelChange)="onSelectDataType($event)"
                 placeholder="Select here..."
                 required
-              />
+              >
+                <ng-template let-item #item>
+                  <div class="flex items-center gap-2">
+                    <i [class]="item.icon"></i>
+                    <span>{{ item.name }}</span>
+                  </div>
+                </ng-template>
+              </p-select>
             </div>
             @switch (selectedDataType()) {
               @case (DataType.Text) {
