--- a/client/src/app/features/chatbot/chatbot.component.html
+++ b/client/src/app/features/chatbot/chatbot.component.html
@@ -1,4 +1,4 @@
-<div class="w-full h-full" style="background-color: #f8f8f8">
+<div class="w-full h-full bg-white">
   <div class="w-full h-full max-w-250 relative mx-auto">
     <div class="flex items-center justify-between p-1">
       <p-button
@@ -64,14 +64,8 @@
         </div>
       } @else {
         <div class="w-full h-full flex items-center pt-30 flex flex-col">
-          <video
-            autoplay
-            muted
-            loop
-            class="w-72 h-72"
-            src="assets/animations/chatbot-animation.mp4"
-          ></video>
-          <div class="text-center" style="margin-top: -50px">
+          <video autoplay muted loop class="w-64 h-64" src="assets/animations/ai-video.mp4"></video>
+          <div class="text-center" style="margin-top: -40px">
             <p class="text-2xl font-medium">Ask about your database</p>
             <p class="text-sm text-surface-500">AI responses may be inaccurate.</p>
           </div>
