--- a/client/src/app/features/base/base.component.html
+++ b/client/src/app/features/base/base.component.html
@@ -38,7 +38,7 @@
 
     @if (!hasSelectedTable) {
       <div class="flex flex-col w-full h-full items-center pt-50 bg-gray-50">
-        <p-image src="assets/images/chill-bear.png" alt="Image" width="320" />
+        <p-image src="assets/images/chill-bear.png" width="320" height="320" />
         <p class="text-surface-500 italic flex items-center" style="margin-top: -45px">
           <span>Unlock insights by picking any table to explore its data!</span>
         </p>
