--- a/client/src/app/shared/spreadsheet/components/view-options/data-view-options.component.html
+++ b/client/src/app/shared/spreadsheet/components/view-options/data-view-options.component.html
@@ -96,7 +96,7 @@
           ? `Grouped by ${rules().length} rules`
           : 'Group'
     "
-    icon="icon icon-group"
+    icon="icon icon-list-collapse"
     variant="outlined"
     [severity]="rules().length ? 'primary' : 'secondary'"
     (click)="popover.show($event)"
@@ -110,7 +110,7 @@
           ? `Sorted by ${rules().length} rules`
           : 'Sort'
     "
-    icon="icon icon-arrow-down-a-z"
+    icon="icon icon-arrow-down-up"
     variant="outlined"
     [severity]="rules().length ? 'primary' : 'secondary'"
     (click)="popover.show($event)"
