style: update link styling in spreadsheet component for improved user interaction

--- a/client/src/app/shared/spreadsheet/spreadsheet.component.html
+++ b/client/src/app/shared/spreadsheet/spreadsheet.component.html
@@ -505,7 +505,7 @@
                       @if (row === tableRowService.pendingRow) {
                         <a
                           safe-area
-                          class="text-xs text-blue-500 pointer-events-auto"
+                          class="text-xs text-blue-500 cursor-pointer hover:underline"
                           (click)="tableRowService.cancelPendingRow()"
                           >Cancel</a
                         >
