fix: update button icons in column editor drawer for consistency

--- a/client/src/app/features/base/table/column-editor/column-editor-drawer.component.html
+++ b/client/src/app/features/base/table/column-editor/column-editor-drawer.component.html
@@ -212,7 +212,7 @@
                           class="w-full"
                         />
                         <p-button
-                          icon="pi pi-trash"
+                          icon="icon icon-trash"
                           [text]="true"
                           severity="danger"
                           (click)="removeOption(idx)"
@@ -220,7 +220,7 @@
                       </div>
                     }
                     <div>
-                      <p-button icon="pi pi-plus" label="Add option" (click)="addOption()" />
+                      <p-button icon="icon icon-plus" label="Add option" (click)="addOption()" />
                     </div>
                   </div>
                 </div>
