feat: add row size options to spreadsheet component
- Introduced a new row-size-options component to allow users to customize row sizes in the spreadsheet.
- Updated spreadsheet.component.html to include the new row size options.
- Removed the deprecated column-view-options component and its associated files to streamline the codebase.

--- a/client/src/app/shared/spreadsheet/spreadsheet.component.html
+++ b/client/src/app/shared/spreadsheet/spreadsheet.component.html
@@ -43,6 +43,10 @@
         [currentColumns]="tableColumnService.sortedColumns()"
         (onApply)="tableService.onApplySort($event)"
       />
+      <row-size-options
+        [rowSize]="$any(tableRowService.rowSize)"
+        (rowSizeChange)="tableRowService.setRowSize($event)"
+      />
     </div>
     <p-inputgroup class="w-xs max-w-xs">
       <p-iconfield>
