--- a/client/src/app/layouts/main-layout/main-layout.component.html
+++ b/client/src/app/layouts/main-layout/main-layout.component.html
@@ -15,24 +15,33 @@
       </div>
       <div class="text-surface-300">/</div>
       <div class="font-medium text-sm">{{ title() }}</div>
+      @if (isBaseRoute()) {
+        <div class="text-surface-300">/</div>
+        <div class="flex items-center gap-1 text-sm text-surface-500">
+          <i class="icon icon-database"></i>
+          public
+        </div>
+      }
     </div>
-    <div class="flex gap-2 items-center">
-      <p-button
-        icon="icon icon-book-open-text"
-        severity="secondary"
-        [pTooltip]="'API Docs'"
-        tooltipPosition="bottom"
-        (click)="openAPIDocs()"
-      />
-      <p-button
-        icon="icon icon-sparkles"
-        severity="info"
-        [pTooltip]="'AI Chatbot'"
-        tooltipPosition="bottom"
-        [outlined]="true"
-        (click)="toggleChatbot()"
-      />
-    </div>
+    @if (isBaseRoute()) {
+      <div class="flex gap-2 items-center">
+        <p-button
+          icon="icon icon-book-open-text"
+          severity="secondary"
+          [pTooltip]="'API Docs'"
+          tooltipPosition="bottom"
+          (click)="openAPIDocs()"
+        />
+        <p-button
+          icon="icon icon-sparkles"
+          severity="info"
+          [pTooltip]="'AI Chatbot'"
+          tooltipPosition="bottom"
+          [outlined]="true"
+          (click)="toggleChatbot()"
+        />
+      </div>
+    }
   </div>
   <div class="app-main w-full h-full flex" [class.chatbot--visible]="chatbotVisible()">
     <div class="flex flex-col justify-between border-r-1 border-surface-200">
@@ -67,12 +76,17 @@
     <div class="w-full h-full">
       <router-outlet />
     </div>
-    <div class="app-chatbot border-l-1 border-surface-200" [class.fullscreen]="chatbotFullscreen()">
-      <chatbot
-        [visible]="chatbotVisible()"
-        (fullscreen)="chatbotFullscreen.set($event)"
-        (onClose)="chatbotVisible.set(false)"
-      />
-    </div>
+    @if (isBaseRoute()) {
+      <div
+        class="app-chatbot border-l-1 border-surface-200"
+        [class.fullscreen]="chatbotFullscreen()"
+      >
+        <chatbot
+          [visible]="chatbotVisible()"
+          (fullscreen)="chatbotFullscreen.set($event)"
+          (onClose)="chatbotVisible.set(false)"
+        />
+      </div>
+    }
   </div>
 </div>
