refactor: update layout and styling in TableDetail and Spreadsheet components
- Added custom width and height classes to the Insert button in TableDetailComponent for improved UI consistency.
- Adjusted the vertical divider's margin and height in TableDetailComponent for better alignment.
- Modified the input group width classes in SpreadsheetComponent for enhanced responsiveness.

--- a/client/src/app/features/base/table/table-detail/table-detail.component.html
+++ b/client/src/app/features/base/table/table-detail/table-detail.component.html
@@ -27,10 +27,11 @@
         <p-splitbutton
           label="Insert"
           icon="icon icon-plus"
+          class="w-30 h-9.3"
           [model]="insertMenuItems"
           (onClick)="addNewRecord()"
         />
-        <p-divider layout="vertical" />
+        <p-divider layout="vertical" class="before:h-7! before:mt-1" />
       </div>
     </ng-template>
   </spreadsheet>
