--- a/client/src/app/shared/spreadsheet/spreadsheet.component.html
+++ b/client/src/app/shared/spreadsheet/spreadsheet.component.html
@@ -49,7 +49,7 @@
           (rowSizeChange)="tableRowService.setRowSize($event)"
         />
       </div>
-      <p-inputgroup class="w-xs max-w-xs">
+      <p-inputgroup class="w-3xs max-w-3xs">
         <p-iconfield>
           <p-inputicon class="icon icon-search !z-2" />
           <input
