--- a/client/src/app/shared/spreadsheet/components/field-cell/select/cell.component.html
+++ b/client/src/app/shared/spreadsheet/components/field-cell/select/cell.component.html
@@ -3,7 +3,7 @@
     <p-tag severity="secondary" [value]="data"></p-tag>
   </div>
 }
-@if (selecting) {
+@if (selecting && !readonly) {
   <p-menu
     #menu
     [model]="items"
